[gd_scene load_steps=6 format=3 uid="uid://ddqulie4tvoxo"]

[ext_resource type="Script" path="res://Scenes/Menus/Audio.gd" id="1_35b78"]
[ext_resource type="AudioStream" uid="uid://bjodak6kents" path="res://Audio/Aqua - Barbie Girl (Official Music Video).wav" id="3_ffe1t"]
[ext_resource type="PackedScene" uid="uid://d0ci47c7b71ec" path="res://Scenes/Menus/AudioSlider.tscn" id="3_sjgx6"]

[sub_resource type="CanvasTexture" id="CanvasTexture_334n3"]

[sub_resource type="Theme" id="Theme_fcvlq"]
SpinBox/icons/updown = SubResource("CanvasTexture_334n3")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_35b78")

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.641
anchor_right = 0.501
anchor_bottom = 0.641
offset_left = -36.0
offset_top = -15.368
offset_right = 36.848
offset_bottom = 15.632
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ffe1t")
autoplay = true
bus = &"Music"

[node name="MusicVolumeSlider" parent="." node_paths=PackedStringArray("spinbox") instance=ExtResource("3_sjgx6")]
layout_mode = 1
offset_left = -101.0
offset_top = 10.0
offset_right = 99.0
offset_bottom = 30.0
max_value = 1.0
step = 0.001
spinbox = NodePath("SpinBox")
bus_name = "Music"

[node name="Label" type="Label" parent="MusicVolumeSlider"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -0.525
anchor_right = 0.5
anchor_bottom = -0.525
offset_left = -23.0
offset_top = -11.5
offset_right = 23.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Music"

[node name="SpinBox" type="SpinBox" parent="MusicVolumeSlider"]
layout_mode = 0
offset_left = 205.0
offset_top = -6.0
offset_right = 288.063
offset_bottom = 25.0
theme = SubResource("Theme_fcvlq")
alignment = 1

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="drag_ended" from="MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="value_changed" from="MusicVolumeSlider/SpinBox" to="MusicVolumeSlider" method="_on_spin_box_value_changed"]
